# taskjira

./: #pyproject.toml#  #pyproject.toml.old#  .envrc  .gitignore  .sourcery.yaml  CONTRIBUTING.md  LICENSE  LICENSE.md  README.md  hello.py  mkdocs.yml  pyproject.toml  taskjira.py  test.out
docs/: index.md  modules.md
src/: config.py  dataclasses.py  integrations.py  jira.py  taskwarrior.py
taskjira/: taskjira.py
taskjira/src/: #integrations.py#  config.py  dataclasses.py  integrations.py  jira.py  taskwarrior.py  utils.py
tests/: test_foo.py
